Ajout de la structure Html

--- a/01-accordeon-booleen.html
+++ b/01-accordeon-booleen.html
@@ -5,8 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Accordéon avec des booléens</title>
+    <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
   </head>
   <body>
     <h1>Accordéon avec des booléens</h1>
+    <div class="accordeon">
+      <section>
+        <button>bouton 1</button>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ab aperiam cum! Rerum quia officia ab minus minima dolorem recusandae odit, aut, quos eveniet provident vel. Hic sit nesciunt unde.</p>
+      </section>
+      <section>
+        <button>bouton 2</button>
+        <p>Perspiciatis, eveniet quibusdam? Voluptatibus, illo perspiciatis! Nihil eveniet, quasi et architecto alias unde. Tempora nihil aliquid, ea qui quas repellendus modi dolorum tempore amet hic laborum doloremque debitis, ratione aut.</p>
+      </section>
+      <section>
+        <button>bouton 3</button>
+        <p>Repudiandae vitae sit enim aperiam eaque delectus similique eveniet magni reiciendis voluptas recusandae distinctio ipsam natus aut labore sunt rerum inventore suscipit facere voluptate, iste iusto corporis. Rem, eos mollitia.</p>
+      </section>
+    </div>
   </body>
 </html>
