--- a/03-accordeon-collapse.html
+++ b/03-accordeon-collapse.html
@@ -5,8 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Accordéon avec x-collapse</title>
+    <!-- Alpine Plugins -->
+<script defer src="https://unpkg.com/@alpinejs/collapse@3.x.x/dist/cdn.min.js"></script>
+ 
+<!-- Alpine Core -->
+<script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
   </head>
   <body>
     <h1>Accordéon avec <code>x-collapse</code></h1>
+    <div id="accordeon"x-data="{isOpen:2,}" >
+      <section>
+        <button @click="isOpen = 1">bouton 1</button>
+        <p x-collapse.duration.10000ms x-show="isOpen === 1" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, nam ipsa tenetur deleniti fugiat modi earum harum ut sunt. Modi, reprehenderit perspiciatis nulla consequuntur asperiores cumque voluptate quibusdam in consequatur.</p>
+      </section>
+      <section>
+        <button @click="isOpen = 2">bouton 2</button>
+        <p x-collapse.duration.10000ms x-show="isOpen === 2">Nobis dolores molestiae aut alias fuga? Expedita, labore eaque earum at tempora molestias in impedit, culpa itaque amet recusandae beatae, iste iure cupiditate maiores. Quod necessitatibus aut dolorem sit accusamus.</p>
+      </section>
+      <section>
+        <button @click="isOpen = 3">bouton 3</button>
+        <p x-collapse.duration.10000ms x-show="isOpen === 3">Quaerat doloremque nesciunt debitis esse dignissimos, praesentium asperiores rem error accusamus iusto cum maxime iure aliquid suscipit similique adipisci, harum voluptatem quod in illo fugiat animi quis. Ex, consequuntur alias!</p>
+      </section>
+    </div>
   </body>
 </html>
